--- a/eventopia/index.html
+++ b/eventopia/index.html
@@ -9,6 +9,7 @@
   <body >
     <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
+    <link rel="stylesheet" href="src/index.css">
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
   </body>
 </html>
